force-app/main/default/objects/ContactPointTypeConsent/fields/DU_BusinessPartnerExtId__c.field-meta.xml
<CustomField>
    <fullName>DU_BusinessPartnerExtId__c</fullName>
    <description>CDM: For integration purposes when related to a customer record.</description>
    <externalId>true</externalId>
    <inlineHelpText>Concatenation of Business Partner ID, Legal Entity, and Contact Point Type with a hash (#) among them.</inlineHelpText>
    <label>Business Partner Ext ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>