force-app/main/default/objects/ContactPointTypeConsent/fields/DU_ContactPointType__c.field-meta.xml
<CustomField>
    <fullName>DU_ContactPointType__c</fullName>
    <description>CDM: The field contains the available channels the consent is gathered for. The standard Salesforce field is not used because of limited values.</description>
    <label>Contact Point Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>MailingAddress</fullName>
                <label>Mailing Address</label>
            </value>
            <value>
                <fullName>SMSandOther</fullName>
                <label>SMS and Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>