force-app/main/default/objects/ContactPointTypeConsent/fields/DU_LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>DU_LegalEntity__c</fullName>
    <description>CDM: Contains the legal entity, which the consent is related to. Need to be maintained on market level by the market</description>
    <label>Legal Entity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DON&apos;T USE - PLACEHOLDER</fullName>
            </value>
            <value>
                <fullName>004215</fullName>
                <label>Volkswagen FS France S.A.S., Roissy-en-Franc</label>
            </value>
            <value>
                <fullName>004260</fullName>
                <label>Volkswagen Holding Financière S.A., Villers-Cotterêts</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>