force-app/main/default/objects/ContactPointTypeConsent/fields/DU_MasterConsentSystemPendingUpdate__c.field-meta.xml
<CustomField>
    <fullName>DU_MasterConsentSystemPendingUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: whether a master consent system is yet to acknowledge that it received an update in this consent record.</description>
    <label>Master Consent System Pending Update</label>
    <type>Checkbox</type>
</CustomField>