force-app/main/default/objects/ContactPointTypeConsent/validationRules/DU_LegalEntityCantBePlaceholder.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_LegalEntityCantBePlaceholder</fullName>
    <active>true</active>
    <description>This should be activated upon installation. Legal Entity can&apos;t be the placeholder value. You need to first define and then use real values specific to your country.</description>
    <errorConditionFormula>ISPICKVAL(DU_LegalEntity__c, &quot;DON&apos;T USE - PLACEHOLDER&quot;)</errorConditionFormula>
    <errorDisplayField>DU_LegalEntity__c</errorDisplayField>
    <errorMessage>Legal Entity can&apos;t be the placeholder value. You need to first define and then use real values specific to your country.</errorMessage>
</ValidationRule>