force-app/main/default/objects/ContactPointTypeConsent/validationRules/DU_MandatoryValues.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_MandatoryValues</fullName>
    <active>true</active>
    <description>Mandatory fields for Contact Point Type Consent records.</description>
    <errorConditionFormula>ISPICKVAL(DU_LegalEntity__c, &quot;&quot;) || ISBLANK(EffectiveFrom) || ISBLANK(CaptureDate) || ISBLANK(CaptureSource)</errorConditionFormula>
    <errorMessage>Following fields are required: Legal Entity, Effective From, Capture Date, Capture Source.</errorMessage>
</ValidationRule>